# cat-vrs-python

./: pyproject.toml
.github/: CODEOWNERS
.github/workflows/: python-cqa.yaml  release.yaml
src/ga4gh/cat_vrs/: recipes.py
tests/validation/: test_cat_vrs_models.py
